fixed spacing on phone

--- a/css/index.css
+++ b/css/index.css
@@ -1188,58 +1188,81 @@ form .btn2{
   }
 }
 
-@media(min-height: 1750px){
+@media(min-height: 1750px) {
   .about {
     grid-template-columns: auto;
     grid-template-rows: 1fr 2fr;
   }
+
   .about-img img {
     width: calc(100% - 25rem);
     margin-top: 9.5%;
     margin-bottom: 0;
   }
-  .about-text h1{
+
+  .about-text h1 {
     font-size: 100px;
     text-align: center;
-    margin-top: -250px;
+    margin-top: -120px;
   }
-  .about-text h2{
-    font-size:40px;
+
+  .about-text h2 {
+    font-size: 40px;
     margin: 60px
   }
-  .btn2{
+
+  .btn2 {
     padding: 28px 100px;
     font-size: 30px;
   }
-  .social-icons ul li{
-    width:80px;
-    height:80px;
+
+  .social-icons ul li {
+    width: 80px;
+    height: 80px;
     font-size: 60px;
     margin-top: 20px;
     padding-top: 0;
   }
 
-  .home-text{
+  .home-text {
     margin-left: 12%;
+  }
+
+  .email-button {
+    font-size: 50px;
+  }
+
+  .phone-button {
+    font-size: 50px;
+  }
+
+  .linkedin-button {
+    font-size: 50px;
+  }
+
+  .contact h2 {
+    font-size: 75px;
+  }
+
+  .contact-below form {
+    margin-top: 92px;
   }
 
   /*.home{*/
   /*  grid-template-columns: auto;*/
   /*  grid-template-rows: repeat(2, 1fr);*/
   /*}*/
-
   /*.home-text{*/
   /*  order: 2;*/
   /*  margin-left: 25%;*/
   /*}*/
-
   /*.home-img img{*/
   /*  margin-left: 25%;*/
   /*}*/
-
   /*.home-text h4{*/
   /*  margin-left:20%;*/
   /*}*/
+
 }
 
 @media(max-height: 1250px){
